--- a/css/styles.css
+++ b/css/styles.css
@@ -51,11 +51,11 @@ p {
     padding: 3rem 0;
   }
 
-  h1 {
+  .big-heading {
     font-size: 2.8rem;
   }
 
-  #title {
+  #title .container-fluid {
     text-align: center;
   }
 }
